zyfra/app-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: zyfra
  labels:
    name: zyfra
