zyfra/zygo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zygo-api
  namespace: zyfra
  labels:
    app: zygo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zygo
  template:
    metadata:
      labels:
        app: zygo
    spec:
      containers:
      - name: zygo
        image: senthilsweb/zygo:latest
        ports:
        - containerPort: 3000
