zyfra/gotrue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotrue-api
  namespace: zyfra
  labels:
    app: gotrue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gotrue
  template:
    metadata:
      labels:
        app: gotrue
    spec:
      containers:
      - name: gotrue
        image: senthilsweb/gotrue:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: gotrue-service # this name will be used to resolve hostname between containers e.g. http://gotrue-service:3000
spec:
  ports:
  - name: http
    port: 3000        # Default port used by the image
    targetPort: 3000  # port exposed by Pod
  selector:
    app: gotrue       # points to the depoyment with the app named "gotrue" config
