zyfra/krakend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-api
  namespace: zyfra
  labels:
    app: krakend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: senthilsweb/krakend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: krakend-service # this name will be used to resolve hostname between containers e.g. http://krakend-service:3000
spec:
  # Make the service externally visible via the node
  type: NodePort 
  ports:
  - name: http
    # Which port on the node is the service available through?
    nodePort: 30081
    # Inside the cluster, what port does the service expose?
    port: 8080        
    # port exposed by Pod (should match container port in the deployment manifest)
    targetPort: 8080  
  selector:
    app: krakend    # points to the depoyment with the app named "krakend" config
