zyfra/zyminio-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: minio-service
  labels:
    app: minio
spec:
  type: NodePort
  ports:
  - name: tcp
   # Which port on the node is the service available through?
    nodePort: 30085
    # Inside the cluster, what port does the service expose?
    port: 9001
    # port exposed by Pod (should match container port in the deployment manifest)
    targetPort: 9001
  selector:
    app: minio
