zyfra/zypostgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: postgres-service
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - name: tcp
   # Which port on the node is the service available through?
    nodePort: 30084
    # Inside the cluster, what port does the service expose?
    port: 5432
    # port exposed by Pod (should match container port in the deployment manifest)
    targetPort: 5432
  selector:
    app: postgres
