zyfra/zyredis-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: redis-service
  labels:
    app: redis
spec:
  type: NodePort
  ports:
  - name: tcp
   # Which port on the node is the service available through?
    nodePort: 30086
    # Inside the cluster, what port does the service expose?
    port: 6379
    # port exposed by Pod (should match container port in the deployment manifest)
    targetPort: 6379
  selector:
    app: redis
