zyfra/zyvue-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zyfra
  name: zyvue-service
spec:
  # Make the service externally visible via the node
  type: NodePort 
  ports:
  - name: http
    # Which port on the node is the service available through?
    nodePort: 32084
    # Inside the cluster, what port does the service expose?
    port: 3000        
    # port exposed by Pod (should match container port in the deployment manifest)
    targetPort: 3000  
  selector:
    app: zyvue
