zyfra/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: zygo-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zyvue-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/rest"
        backend:
          service:
            name: krakend-service
            port:
              number: 8080
